# DoomClone

./: .gitignore  CMakeLists.txt  DoomClone.sln  LICENSE  main.cpp
DoomClone/: DoomClone.vcxproj  DoomClone.vcxproj.filters
DoomClone/src/: DoomClone.h
DoomClone/src/DoomClone/: Application.cpp  Application.h  core.h  entry_point.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
lib/: CMakeLists.txt
lib/application/: CMakeLists.txt
lib/application/include/: application.h
lib/application/src/: application.cpp
lib/camera/: CMakeLists.txt
lib/camera/include/: camera.h
lib/camera/src/: camera.cpp
lib/shader/: CMakeLists.txt
lib/shader/include/: shader.h
lib/shader/src/: shader.cpp
lib/texture/: CMakeLists.txt
lib/texture/include/: texture.h
lib/texture/src/: texture.cpp
resources/shaders/: fragment.shader  vertex.shader
